Performance Comparison (Loops vs Streams)